openshift/app/service.yaml
---
# Open up ports to communicate with the app.
kind: Service
apiVersion: v1
metadata:
  name: app
  annotations:
    description: Exposes and load balances the application pods.
  labels:
    name: app
    part-of: coevent
    version: 1.0.0
    component: app
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    part-of: coevent
    component: app
  sessionAffinity: None
  type: ClusterIP
