openshift/app/route.yaml
# The route for the app.
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app
  namespace: default
  labels:
    name: app
    part-of: coevent
    version: 1.0.0
    component: app
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: coevent.apps.silver.devops.gov.bc.ca
  path: ""
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: app
    weight: 100
